# fast-hash-map-v0

./: CMakeLists.txt  README.md
inc/: fast-hashmap.hpp
src/: fast-hashmap.cpp
test/: tests.cpp
